그래프 ui 개선 및 성능 개선 ( 쓸대없는 반복 구조 제거 )

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'com.github.anastr:speedviewlib:1.6.0'
+
+    // folding-cell 라이브러리
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
 }
 apply plugin: 'com.google.gms.google-services'
