--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.oceanit">
+    package="com.example.oceanit" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,10 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OceanIT"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".View.NewWorkCheck"
-            android:exported="true">
+            android:name=".View.WebcctvView"
+            android:exported="false" />
+        <activity
+            android:name=".View.NetWorkCheck"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +46,7 @@
         <service
             android:name=".Firebase.MyFirebaseMessagingService"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
