--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
 buildscript {
+    ext {
+        kotlin_version = '1.8.20'
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
     }
 }
 
